testutils/test/generated_ingresses/basic_tea_svc_v1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress-tea-svc-tea
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              service:
                name: tea-svc
                port:
                  number: 80
            path: /tea
            pathType: "ImplementationSpecific"
